resolved the homepage overflow

--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -104,7 +104,8 @@ background: linear-gradient(351deg, rgba(120,119,136,0) 0%, rgba(0,0,0,0.3715861
     }
 
     .features p {
-        font-size: 1rem;
+        font-size: 12px;
+        font-weight: 400;
     }
 
 }
